Add 5 daily Java blog posts and restore overwritten article